# Atlantis

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG  CHANGELOG_4  CMakeLists.txt  CREDITS  CompilerSupport.cmake  GAMEMASTER  GAMEMASTER.md  Makefile  README  README.md  SimplexNoise.cpp  SimplexNoise.h  TODO  alist.cpp  alist.h  aregion.cpp  aregion.h  army.cpp  army.h  astring.cpp  astring.h  battle.cpp  battle.h  bfs.h  build  economy.cpp  edges.cpp  edit.cpp  events-assassination.cpp  events-battle.cpp  events.cpp  events.h  faction.cpp  faction.h  fileio.cpp  fileio.h  game.cpp  (+64 more)
.cursor/rules/: applying-rules.mdc  atlantis-skills.mdc  atlantis-testing.mdc  code-quality.mdc  cursor-rules-handling.mdc  general-development.mdc  overall-guidance.mdc  restrict-scope-changes.mdc  rules-organization.mdc
.github/: copilot-instructions.md
.github/copilot-context/: coding-style.md
.github/workflows/: atlantis-pr.yml  build-cmake.yml  build.yml  ccpp.yml  monthly.yml
arcadia/: Changes.txt  Heros.txt  Makefile  Notes.txt  alist.cpp  alist.h  aregion.cpp  aregion.h  army1.cpp  army1.h  astring.cpp  astring.h  battle1.cpp  battle1.h  economy.cpp  edit.cpp  extra.cpp  faction.cpp  faction.h  fileio.cpp  fileio.h  formation1.cpp  formation1.h  game.cpp  game.h  gamedata.cpp  gamedata.h  gamedefs.cpp  gamedefs.h  gameio.cpp  gameio.h  genrules.cpp  genrules2.cpp  helper.h  hexside.cpp  i_rand.cpp  i_rand.h  i_std.h  items.cpp  items.h  (+33 more)
arcadia/html/: arcadia.css  intro.html
basic/: Makefile.inc  extra.cpp  map.cpp  rules.cpp  world.cpp
ceran/: ceran.html  ceran_intro.html  extra.cpp  makefile  monsters.cpp  rules.cpp  world.cpp
conquest/: conquest.html  conquest_intro.html  extra.cpp  makefile  map.cpp  monsters.cpp  rules.cpp  skillshows.cpp  specials.cpp  world.cpp
conquest/html/: conquest.css
fracas/: Makefile.inc  extra.cpp  fracas_intro.html  map.cpp  monsters.cpp  rules.cpp  world.cpp
havilah/: Makefile.inc  extra.cpp  havilah_intro.html  map.cpp  monsters.cpp  rules.cpp  world.cpp
kingdoms/: Makefile.inc  extra.cpp  map.cpp  monsters.cpp  rules.cpp  world.cpp
map_viewer/: README.md  hex.ts  index.html  index.ts  package.json  styles.css
neworigins/: .gitignore  Makefile.inc  extra.cpp  hexmap.json  index.html  index.ts  map.cpp  map.json  monsters.cpp  neworigins_intro.html  package.json  rules.cpp  world.cpp
neworigins/html/: neworigins.css  neworigins.html
neworigins_v2/: extra.cpp  map.cpp  rules.cpp  world.cpp
neworigins_v2/html/: neworigins_v2.html
realms/: extra.cpp  makefile  realms.html  realms_intro.html  rules.cpp  world.cpp
realms/html/: realms.css
s/: build  configure  runtests
smoketest/: bot.py  checkpassword.py  smoketest.py
snapshot-tests/: run-game-snapshots.sh  run-rules-snapshot.sh  run-snapshots.sh  update-all-game-snapshots.sh  update-all-rule-snapshots.sh  update-game-snapshots.sh  update-rules-snapshot.sh
snapshot-tests/neworigins_turns/: new-turn.sh
snapshot-tests/neworigins_turns/turn_0/: engine-output.txt  game.in  game.out  players.in  report.1  report.1.json  report.3  report.3.json  template.3  times.1379
snapshot-tests/neworigins_turns/turn_1/: engine-output.txt  game.in  game.out  orders.3  players.in  players.out  report.1  report.1.json  report.3  report.3.json  template.3  times.13  times.7945
snapshot-tests/neworigins_turns/turn_10/: engine-output.txt  game.out  orders.3  players.out  report.1  report.1.json  report.3  report.3.json  template.3  times.5653  times.733
snapshot-tests/neworigins_turns/turn_11/: engine-output.txt  game.in  game.out  orders.3  players.in  report.1  report.1.json  report.3  report.3.json  template.3  times.2080  times.3741
snapshot-tests/neworigins_turns/turn_12/: engine-output.txt  game.in  game.out  orders.3  players.in  players.out  report.1  report.1.json  report.3  report.3.json  template.3  times.2418  times.4187  times.5639
snapshot-tests/neworigins_turns/turn_13/: engine-output.txt  game.in  game.out  orders.3  players.in  players.out  report.1  report.1.json  report.3  report.3.json  template.3  times.1105  times.2030  times.5461  times.5664  times.6584  times.7836  times.831  times.8502  times.8653  times.9051  times.9736
snapshot-tests/neworigins_turns/turn_2/: engine-output.txt  game.in  game.out  orders.3  report.1  report.1.json  report.3  report.3.json  template.3  times.4381
snapshot-tests/neworigins_turns/turn_3/: game.out  orders.3  players.in  report.1  report.1.json  report.3  report.3.json  template.3  times.1937  times.2350
snapshot-tests/neworigins_turns/turn_4/: game.in  game.out  orders.3  players.in  report.1  report.1.json  report.3  report.3.json  template.3  times.1071
snapshot-tests/neworigins_turns/turn_5/: engine-output.txt  game.in  game.out  orders.3  players.in  players.out  report.1  report.1.json  (+4 more)
snapshot-tests/rules/: basic.html  fracas.html  havilah.html  kingdoms.html  neworigins.html  standard.html
snapshot-tests/turns/: new-turn.sh
standard/: Makefile.inc  extra.cpp  index.html  index.ts  makefile  map.cpp  monsters.cpp  rules.cpp  run.sh  skillshows.cpp  spells.h  standard.html  standard_intro.html  world.cpp
tests/: run-tests.sh
tests/turns/: game_1.in  game_10.in  game_12.in  game_6.in  game_7.in  game_9.in  new-turn.sh  orders_11.3  orders_12.3  orders_13.3  players_1.in  players_10.in  players_11.in  players_12.in  players_8.in
unittest/: build_order_test.cpp  extra.cpp  faction_test.cpp  fleet_build_test.cpp  indent_formatter_test.cpp  json_report_test.cpp  landmark_order_test.cpp  main.cpp  map.cpp  market_order_test.cpp  monsters.cpp  n07_victory_test.cpp  name_sanitization_test.cpp  order_checker_test.cpp  order_parsing_test.cpp  produce_test.cpp  quartermaster_test.cpp  rules.cpp  safe_list_test.cpp  spell_test.cpp  string_filters_test.cpp  string_filters_without_ranges_test.cpp  testhelper.cpp  testhelper.hpp  unit_test.cpp  unit_test_helper_test.cpp  world.cpp
wyreth/: extra.cpp  makefile  monsters.cpp  rules.cpp  rules.h  spells.cpp  standard.html  world.cpp  wyreth.html  wyreth_intro.html
(+144 files in other folders)
